packages/cloudevents/src/models/filters/sql/CESQLParserParser.ts
// Generated from src/models/filters/sql/CESQLParser.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from "antlr4ts/atn/ATN.js";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer.js";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException.js";
import { NotNull } from "antlr4ts/Decorators.js";
import { NoViableAltException } from "antlr4ts/NoViableAltException.js";
import { Override } from "antlr4ts/Decorators.js";
import { Parser } from "antlr4ts/Parser.js";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext.js";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator.js";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener.js";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor.js";
import { RecognitionException } from "antlr4ts/RecognitionException.js";
import { RuleContext } from "antlr4ts/RuleContext.js";
//import { RuleVersion } from "antlr4ts/RuleVersion.js";
import { TerminalNode } from "antlr4ts/tree/TerminalNode.js";
import { Token } from "antlr4ts/Token.js";
import { TokenStream } from "antlr4ts/TokenStream.js";
import { Vocabulary } from "antlr4ts/Vocabulary.js";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl.js";

import * as Utils from "antlr4ts/misc/Utils.js";

import { CESQLParserListener } from "./CESQLParserListener.js";
import { CESQLParserVisitor } from "./CESQLParserVisitor.js";

export class CESQLParserParser extends Parser {
  public static readonly SPACE = 1;
  public static readonly LR_BRACKET = 2;
  public static readonly RR_BRACKET = 3;
  public static readonly COMMA = 4;
  public static readonly SINGLE_QUOTE_SYMB = 5;
  public static readonly DOUBLE_QUOTE_SYMB = 6;
  public static readonly AND = 7;
  public static readonly OR = 8;
  public static readonly XOR = 9;
  public static readonly NOT = 10;
  public static readonly STAR = 11;
  public static readonly DIVIDE = 12;
  public static readonly MODULE = 13;
  public static readonly PLUS = 14;
  public static readonly MINUS = 15;
  public static readonly EQUAL = 16;
  public static readonly NOT_EQUAL = 17;
  public static readonly GREATER = 18;
  public static readonly GREATER_OR_EQUAL = 19;
  public static readonly LESS = 20;
  public static readonly LESS_GREATER = 21;
  public static readonly LESS_OR_EQUAL = 22;
  public static readonly LIKE = 23;
  public static readonly EXISTS = 24;
  public static readonly IN = 25;
  public static readonly TRUE = 26;
  public static readonly FALSE = 27;
  public static readonly DQUOTED_STRING_LITERAL = 28;
  public static readonly SQUOTED_STRING_LITERAL = 29;
  public static readonly INTEGER_LITERAL = 30;
  public static readonly IDENTIFIER = 31;
  public static readonly IDENTIFIER_WITH_NUMBER = 32;
  public static readonly FUNCTION_IDENTIFIER_WITH_UNDERSCORE = 33;
  public static readonly RULE_cesql = 0;
  public static readonly RULE_expression = 1;
  public static readonly RULE_atom = 2;
  public static readonly RULE_identifier = 3;
  public static readonly RULE_functionIdentifier = 4;
  public static readonly RULE_booleanLiteral = 5;
  public static readonly RULE_stringLiteral = 6;
  public static readonly RULE_integerLiteral = 7;
  public static readonly RULE_functionParameterList = 8;
  public static readonly RULE_setExpression = 9;
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    "cesql",
    "expression",
    "atom",
    "identifier",
    "functionIdentifier",
    "booleanLiteral",
    "stringLiteral",
    "integerLiteral",
    "functionParameterList",
    "setExpression"
  ];

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    undefined,
    "'('",
    "')'",
    "','",
    "'''",
    "'\"'",
    "'AND'",
    "'OR'",
    "'XOR'",
    "'NOT'",
    "'*'",
    "'/'",
    "'%'",
    "'+'",
    "'-'",
    "'='",
    "'!='",
    "'>'",
    "'>='",
    "'<'",
    "'<>'",
    "'<='",
    "'LIKE'",
    "'EXISTS'",
    "'IN'",
    "'TRUE'",
    "'FALSE'"
  ];
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    "SPACE",
    "LR_BRACKET",
    "RR_BRACKET",
    "COMMA",
    "SINGLE_QUOTE_SYMB",
    "DOUBLE_QUOTE_SYMB",
    "AND",
    "OR",
    "XOR",
    "NOT",
    "STAR",
    "DIVIDE",
    "MODULE",
    "PLUS",
    "MINUS",
    "EQUAL",
    "NOT_EQUAL",
    "GREATER",
    "GREATER_OR_EQUAL",
    "LESS",
    "LESS_GREATER",
    "LESS_OR_EQUAL",
    "LIKE",
    "EXISTS",
    "IN",
    "TRUE",
    "FALSE",
    "DQUOTED_STRING_LITERAL",
    "SQUOTED_STRING_LITERAL",
    "INTEGER_LITERAL",
    "IDENTIFIER",
    "IDENTIFIER_WITH_NUMBER",
    "FUNCTION_IDENTIFIER_WITH_UNDERSCORE"
  ];
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    CESQLParserParser._LITERAL_NAMES,
    CESQLParserParser._SYMBOLIC_NAMES,
    []
  );

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return CESQLParserParser.VOCABULARY;
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return "CESQLParser.g4";
  }

  // @Override
  public get ruleNames(): string[] {
    return CESQLParserParser.ruleNames;
  }

  // @Override
  public get serializedATN(): string {
    return CESQLParserParser._serializedATN;
  }

  protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(CESQLParserParser._ATN, this);
  }
  // @RuleVersion(0)
  public cesql(): CesqlContext {
    const _localctx: CesqlContext = new CesqlContext(this._ctx, this.state);
    this.enterRule(_localctx, 0, CESQLParserParser.RULE_cesql);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 20;
        this.expression(0);
        this.state = 21;
        this.match(CESQLParserParser.EOF);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }

  public expression(): ExpressionContext;
  public expression(_p: number): ExpressionContext;
  // @RuleVersion(0)
  public expression(_p?: number): ExpressionContext {
    if (_p === undefined) {
      _p = 0;
    }

    const _parentctx: ParserRuleContext = this._ctx;
    const _parentState: number = this.state;
    let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
    let _prevctx: ExpressionContext = _localctx;
    const _startState: number = 2;
    this.enterRecursionRule(_localctx, 2, CESQLParserParser.RULE_expression, _p);
    let _la: number;
    try {
      let _alt: number;
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 38;
        this._errHandler.sync(this);
        switch (this.interpreter.adaptivePredict(this._input, 0, this._ctx)) {
          case 1:
            {
              _localctx = new FunctionInvocationExpressionContext(_localctx);
              this._ctx = _localctx;
              _prevctx = _localctx;

              this.state = 24;
              this.functionIdentifier();
              this.state = 25;
              this.functionParameterList();
            }
            break;

          case 2:
            {
              _localctx = new UnaryLogicExpressionContext(_localctx);
              this._ctx = _localctx;
              _prevctx = _localctx;
              this.state = 27;
              this.match(CESQLParserParser.NOT);
              this.state = 28;
              this.expression(11);
            }
            break;

          case 3:
            {
              _localctx = new UnaryNumericExpressionContext(_localctx);
              this._ctx = _localctx;
              _prevctx = _localctx;
              this.state = 29;
              this.match(CESQLParserParser.MINUS);
              this.state = 30;
              this.expression(10);
            }
            break;

          case 4:
            {
              _localctx = new ExistsExpressionContext(_localctx);
              this._ctx = _localctx;
              _prevctx = _localctx;
              this.state = 31;
              this.match(CESQLParserParser.EXISTS);
              this.state = 32;
              this.identifier();
            }
            break;

          case 5:
            {
              _localctx = new SubExpressionContext(_localctx);
              this._ctx = _localctx;
              _prevctx = _localctx;
              this.state = 33;
              this.match(CESQLParserParser.LR_BRACKET);
              this.state = 34;
              this.expression(0);
              this.state = 35;
              this.match(CESQLParserParser.RR_BRACKET);
            }
            break;

          case 6:
            {
              _localctx = new AtomExpressionContext(_localctx);
              this._ctx = _localctx;
              _prevctx = _localctx;
              this.state = 37;
              this.atom();
            }
            break;
        }
        this._ctx._stop = this._input.tryLT(-1);
        this.state = 66;
        this._errHandler.sync(this);
        _alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
        while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            if (this._parseListeners != null) {
              this.triggerExitRuleEvent();
            }
            _prevctx = _localctx;
            {
              this.state = 64;
              this._errHandler.sync(this);
              switch (this.interpreter.adaptivePredict(this._input, 3, this._ctx)) {
                case 1:
                  {
                    _localctx = new BinaryMultiplicativeExpressionContext(
                      new ExpressionContext(_parentctx, _parentState)
                    );
                    this.pushNewRecursionContext(_localctx, _startState, CESQLParserParser.RULE_expression);
                    this.state = 40;
                    if (!this.precpred(this._ctx, 6)) {
                      throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
                    }
                    this.state = 41;
                    _la = this._input.LA(1);
                    if (
                      !(
                        (_la & ~0x1f) === 0 &&
                        ((1 << _la) &
                          ((1 << CESQLParserParser.STAR) |
                            (1 << CESQLParserParser.DIVIDE) |
                            (1 << CESQLParserParser.MODULE))) !==
                          0
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 42;
                    this.expression(7);
                  }
                  break;

                case 2:
                  {
                    _localctx = new BinaryAdditiveExpressionContext(new ExpressionContext(_parentctx, _parentState));
                    this.pushNewRecursionContext(_localctx, _startState, CESQLParserParser.RULE_expression);
                    this.state = 43;
                    if (!this.precpred(this._ctx, 5)) {
                      throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
                    }
                    this.state = 44;
                    _la = this._input.LA(1);
                    if (!(_la === CESQLParserParser.PLUS || _la === CESQLParserParser.MINUS)) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 45;
                    this.expression(6);
                  }
                  break;

                case 3:
                  {
                    _localctx = new BinaryComparisonExpressionContext(new ExpressionContext(_parentctx, _parentState));
                    this.pushNewRecursionContext(_localctx, _startState, CESQLParserParser.RULE_expression);
                    this.state = 46;
                    if (!this.precpred(this._ctx, 4)) {
                      throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
                    }
                    this.state = 47;
                    _la = this._input.LA(1);
                    if (
                      !(
                        (_la & ~0x1f) === 0 &&
                        ((1 << _la) &
                          ((1 << CESQLParserParser.EQUAL) |
                            (1 << CESQLParserParser.NOT_EQUAL) |
                            (1 << CESQLParserParser.GREATER) |
                            (1 << CESQLParserParser.GREATER_OR_EQUAL) |
                            (1 << CESQLParserParser.LESS) |
                            (1 << CESQLParserParser.LESS_GREATER) |
                            (1 << CESQLParserParser.LESS_OR_EQUAL))) !==
                          0
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 48;
                    this.expression(5);
                  }
                  break;

                case 4:
                  {
                    _localctx = new BinaryLogicExpressionContext(new ExpressionContext(_parentctx, _parentState));
                    this.pushNewRecursionContext(_localctx, _startState, CESQLParserParser.RULE_expression);
                    this.state = 49;
                    if (!this.precpred(this._ctx, 3)) {
                      throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
                    }
                    this.state = 50;
                    _la = this._input.LA(1);
                    if (
                      !(
                        (_la & ~0x1f) === 0 &&
                        ((1 << _la) &
                          ((1 << CESQLParserParser.AND) |
                            (1 << CESQLParserParser.OR) |
                            (1 << CESQLParserParser.XOR))) !==
                          0
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 51;
                    this.expression(3);
                  }
                  break;

                case 5:
                  {
                    _localctx = new LikeExpressionContext(new ExpressionContext(_parentctx, _parentState));
                    this.pushNewRecursionContext(_localctx, _startState, CESQLParserParser.RULE_expression);
                    this.state = 52;
                    if (!this.precpred(this._ctx, 9)) {
                      throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
                    }
                    this.state = 54;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if (_la === CESQLParserParser.NOT) {
                      {
                        this.state = 53;
                        this.match(CESQLParserParser.NOT);
                      }
                    }

                    this.state = 56;
                    this.match(CESQLParserParser.LIKE);
                    this.state = 57;
                    this.stringLiteral();
                  }
                  break;

                case 6:
                  {
                    _localctx = new InExpressionContext(new ExpressionContext(_parentctx, _parentState));
                    this.pushNewRecursionContext(_localctx, _startState, CESQLParserParser.RULE_expression);
                    this.state = 58;
                    if (!this.precpred(this._ctx, 7)) {
                      throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
                    }
                    this.state = 60;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if (_la === CESQLParserParser.NOT) {
                      {
                        this.state = 59;
                        this.match(CESQLParserParser.NOT);
                      }
                    }

                    this.state = 62;
                    this.match(CESQLParserParser.IN);
                    this.state = 63;
                    this.setExpression();
                  }
                  break;
              }
            }
          }
          this.state = 68;
          this._errHandler.sync(this);
          _alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public atom(): AtomContext {
    let _localctx: AtomContext = new AtomContext(this._ctx, this.state);
    this.enterRule(_localctx, 4, CESQLParserParser.RULE_atom);
    try {
      this.state = 73;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case CESQLParserParser.TRUE:
        case CESQLParserParser.FALSE:
          _localctx = new BooleanAtomContext(_localctx);
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 69;
            this.booleanLiteral();
          }
          break;
        case CESQLParserParser.INTEGER_LITERAL:
          _localctx = new IntegerAtomContext(_localctx);
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 70;
            this.integerLiteral();
          }
          break;
        case CESQLParserParser.DQUOTED_STRING_LITERAL:
        case CESQLParserParser.SQUOTED_STRING_LITERAL:
          _localctx = new StringAtomContext(_localctx);
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 71;
            this.stringLiteral();
          }
          break;
        case CESQLParserParser.IDENTIFIER:
        case CESQLParserParser.IDENTIFIER_WITH_NUMBER:
          _localctx = new IdentifierAtomContext(_localctx);
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 72;
            this.identifier();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public identifier(): IdentifierContext {
    const _localctx: IdentifierContext = new IdentifierContext(this._ctx, this.state);
    this.enterRule(_localctx, 6, CESQLParserParser.RULE_identifier);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 75;
        _la = this._input.LA(1);
        if (!(_la === CESQLParserParser.IDENTIFIER || _la === CESQLParserParser.IDENTIFIER_WITH_NUMBER)) {
          this._errHandler.recoverInline(this);
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true;
          }

          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public functionIdentifier(): FunctionIdentifierContext {
    const _localctx: FunctionIdentifierContext = new FunctionIdentifierContext(this._ctx, this.state);
    this.enterRule(_localctx, 8, CESQLParserParser.RULE_functionIdentifier);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 77;
        _la = this._input.LA(1);
        if (!(_la === CESQLParserParser.IDENTIFIER || _la === CESQLParserParser.FUNCTION_IDENTIFIER_WITH_UNDERSCORE)) {
          this._errHandler.recoverInline(this);
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true;
          }

          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public booleanLiteral(): BooleanLiteralContext {
    const _localctx: BooleanLiteralContext = new BooleanLiteralContext(this._ctx, this.state);
    this.enterRule(_localctx, 10, CESQLParserParser.RULE_booleanLiteral);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 79;
        _la = this._input.LA(1);
        if (!(_la === CESQLParserParser.TRUE || _la === CESQLParserParser.FALSE)) {
          this._errHandler.recoverInline(this);
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true;
          }

          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public stringLiteral(): StringLiteralContext {
    const _localctx: StringLiteralContext = new StringLiteralContext(this._ctx, this.state);
    this.enterRule(_localctx, 12, CESQLParserParser.RULE_stringLiteral);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 81;
        _la = this._input.LA(1);
        if (!(_la === CESQLParserParser.DQUOTED_STRING_LITERAL || _la === CESQLParserParser.SQUOTED_STRING_LITERAL)) {
          this._errHandler.recoverInline(this);
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true;
          }

          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public integerLiteral(): IntegerLiteralContext {
    const _localctx: IntegerLiteralContext = new IntegerLiteralContext(this._ctx, this.state);
    this.enterRule(_localctx, 14, CESQLParserParser.RULE_integerLiteral);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 83;
        this.match(CESQLParserParser.INTEGER_LITERAL);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public functionParameterList(): FunctionParameterListContext {
    const _localctx: FunctionParameterListContext = new FunctionParameterListContext(this._ctx, this.state);
    this.enterRule(_localctx, 16, CESQLParserParser.RULE_functionParameterList);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 85;
        this.match(CESQLParserParser.LR_BRACKET);
        this.state = 94;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (
          ((_la - 2) & ~0x1f) === 0 &&
          ((1 << (_la - 2)) &
            ((1 << (CESQLParserParser.LR_BRACKET - 2)) |
              (1 << (CESQLParserParser.NOT - 2)) |
              (1 << (CESQLParserParser.MINUS - 2)) |
              (1 << (CESQLParserParser.EXISTS - 2)) |
              (1 << (CESQLParserParser.TRUE - 2)) |
              (1 << (CESQLParserParser.FALSE - 2)) |
              (1 << (CESQLParserParser.DQUOTED_STRING_LITERAL - 2)) |
              (1 << (CESQLParserParser.SQUOTED_STRING_LITERAL - 2)) |
              (1 << (CESQLParserParser.INTEGER_LITERAL - 2)) |
              (1 << (CESQLParserParser.IDENTIFIER - 2)) |
              (1 << (CESQLParserParser.IDENTIFIER_WITH_NUMBER - 2)) |
              (1 << (CESQLParserParser.FUNCTION_IDENTIFIER_WITH_UNDERSCORE - 2)))) !==
            0
        ) {
          {
            this.state = 86;
            this.expression(0);
            this.state = 91;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === CESQLParserParser.COMMA) {
              {
                {
                  this.state = 87;
                  this.match(CESQLParserParser.COMMA);
                  this.state = 88;
                  this.expression(0);
                }
              }
              this.state = 93;
              this._errHandler.sync(this);
              _la = this._input.LA(1);
            }
          }
        }

        this.state = 96;
        this.match(CESQLParserParser.RR_BRACKET);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public setExpression(): SetExpressionContext {
    const _localctx: SetExpressionContext = new SetExpressionContext(this._ctx, this.state);
    this.enterRule(_localctx, 18, CESQLParserParser.RULE_setExpression);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 98;
        this.match(CESQLParserParser.LR_BRACKET);
        this.state = 99;
        this.expression(0);
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === CESQLParserParser.COMMA) {
          {
            {
              this.state = 100;
              this.match(CESQLParserParser.COMMA);
              this.state = 101;
              this.expression(0);
            }
          }
          this.state = 106;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 107;
        this.match(CESQLParserParser.RR_BRACKET);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }

  public sempred(_localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
    switch (ruleIndex) {
      case 1:
        return this.expression_sempred(_localctx as ExpressionContext, predIndex);
    }
    return true;
  }
  private expression_sempred(_localctx: ExpressionContext, predIndex: number): boolean {
    switch (predIndex) {
      case 0:
        return this.precpred(this._ctx, 6);

      case 1:
        return this.precpred(this._ctx, 5);

      case 2:
        return this.precpred(this._ctx, 4);

      case 3:
        return this.precpred(this._ctx, 3);

      case 4:
        return this.precpred(this._ctx, 9);

      case 5:
        return this.precpred(this._ctx, 7);
    }
    return true;
  }

  public static __ATN: ATN;
  public static get _ATN(): ATN {
    if (!CESQLParserParser.__ATN) {
      CESQLParserParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(CESQLParserParser._serializedATN));
    }

    return CESQLParserParser.__ATN;
  }
}

export class CesqlContext extends ParserRuleContext {
  public expression(): ExpressionContext {
    return this.getRuleContext(0, ExpressionContext);
  }
  public EOF(): TerminalNode {
    return this.getToken(CESQLParserParser.EOF, 0);
  }
  constructor(parent: ParserRuleContext | undefined, invokingState: number) {
    super(parent, invokingState);
  }
  // @Override
  public get ruleIndex(): number {
    return CESQLParserParser.RULE_cesql;
  }
  // @Override
  public enterRule(listener: CESQLParserListener): void {
    if (listener.enterCesql) {
      listener.enterCesql(this);
    }
  }
  // @Override
  public exitRule(listener: CESQLParserListener): void {
    if (listener.exitCesql) {
      listener.exitCesql(this);
    }
  }
  // @Override
  public accept<Result>(visitor: CESQLParserVisitor<Result>): Result {
    if (visitor.visitCesql) {
      return visitor.visitCesql(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
